cluster/jellyfin/filebrowser-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: filebrowser
    app.kubernetes.io/instance: filebrowser
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: filebrowser
    app.kubernetes.io/instance: filebrowser
