cluster/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8096
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
