cluster/jellyfin/filebrowser-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
  namespace: jellyfin
spec:
  defaultBackend:
    service:
      name: filebrowser
      port:
        number: 80
  ingressClassName: tailscale
  tls:
  - hosts:
    - filebrowser
